[project]
name = "s4cstp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astropy>=7.2.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyautogui>=0.9.54",
    "pydantic>=2.13.4",
    "pyqt6>=6.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pywinauto>=0.6.9",
    "ruff>=0.15.6",
    "scipy>=1.17.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff . "
test = "pytest unit_tests -v --log-file=unit_tests\\test.log --log-date-format=\"%Y-%m-%d %H:%M:%S\" --log-format=\"%(asctime)s [%(levelname)s] %(message)s\""
#test = "pytest tests -v --html=tests\\report.html --log-file=tests\\test.log --log-date-format=\"%Y-%m-%d %H:%M:%S\" --log-format=\"%(asctime)s [%(levelname)s] %(message)s\""
git-pull = "git fetch origin && git reset --hard origin/main"
open-report = "start tests\\report.html"
